# repose

./: .gitignore  Pipfile  README.md  cli.py  setup.cfg  setup.py
src/: cli.py  repose.py  utils.py
src/adapters/: coco.py
src/app/: repose.py
src/app/adapters/: __init__.py
src/app/models/: __init__.py  generator.py  optimizers.py
src/app/utils/: __init__.py  optimizers.py
src/models/: __init__.py  discriminator.py  generator.py
src/repose/: __init__.py  repose.py
src/repose/adapters/: __init__.py  coco.py
src/repose/models/: generator.py
src/repose/utils/: __init__.py  loss.py
