[metadata]
name = repose
version = 0.0.1
author = how melnyczuk
author_email = h.melnyczuk@gmail.com
url = https://github.com/melnyczuk/repose
description = a GAN for generating feasible human poses
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gan, pose, posenet
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9
package_dir =
packages = find:
install_requires =
    numpy==1.20.3
    torch==1.8.1

[isort]
use_parentheses=True
line_length=80

[mypy]

[mypy-torch.*]
ignore_missing_imports = True
